--- a/src/style/components.less
+++ b/src/style/components.less
@@ -1,3 +1,4 @@
+@import "../components/AccentColorSelector/style.less";
 @import "../components/AppBarButton/style.less";
 @import "../components/AppBarSeparator/style.less";
 @import "../components/Button/style.less";
