--- a/src/style/theme-colors.less
+++ b/src/style/theme-colors.less
@@ -139,4 +139,10 @@ body[data-theme="dark"] {
 			}
 		}
 	}
+	
+	.accent-color-selector .accent-color-item {
+		&:before {
+			.encoded-svg-background("<svg width='44px' height='44px' viewBox='0 0 44 44' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect x='20' y='2' width='22' height='22' fill='@{baseHigh}'/><polygon fill-rule='nonzero' points='38 7 38.8789062 7.87890625 28.4394531 18.328125 23 12.8789062 23.8789062 12 28.4394531 16.5507812' fill='@{altHigh}'/></svg>");
+		}
+	}
 }
