Fixed menu item selection indicator

--- a/src/components/NavigationView/style.less
+++ b/src/components/NavigationView/style.less
@@ -463,6 +463,15 @@
 					.navigation-view-item-content {
 						display: none;
 					}
+					
+					&.selected:after {
+						top: auto;
+						left: 12px;
+						right: 12px;
+						bottom: 4px;
+						width: auto;
+						height: 2px;
+					}
 				}
 			}
 			
