--- a/src/style/intro.less
+++ b/src/style/intro.less
@@ -17,6 +17,8 @@
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-overflow-scrolling: touch;
 	-webkit-font-smoothing: antialiased;
+	
+	scrollbar-width: none;
 }
 
 html, body {
