Fixed MenuFlyout items content blocking clicks

--- a/src/classes/MenuFlyout/style.less
+++ b/src/classes/MenuFlyout/style.less
@@ -57,6 +57,7 @@
 			// }
 			
 			.menu-flyout-item-icon {
+				pointer-events: none;
 				margin: 8px 0;
 				
 				// & > .icon,
@@ -82,6 +83,7 @@
 			}
 			
 			.menu-flyout-item-content {
+				pointer-events: none;
 				line-height: 32px;
 				white-space: nowrap;
 			}
