--- a/src/components/HyperlinkButton/style.less
+++ b/src/components/HyperlinkButton/style.less
@@ -2,10 +2,6 @@ a.hyperlink-button {
 	display: inline-block;
 	color: var(--system-accent-color);
 	
-	&:hover:not(:active) {
-		color: var(--base-medium);
-	}
-	
 	&:active {
 		color: var(--base-medium-low);
 	}
@@ -13,5 +9,13 @@ a.hyperlink-button {
 	&[disabled] {
 		pointer-events: none;
 		color: var(--base-medium-low);
+	}
+}
+
+body:not(.touch) {
+	a.hyperlink-button {
+		&:hover:not(:active) {
+			color: var(--base-medium);
+		}
 	}
 }
