--- a/src/components/TextBox/style.less
+++ b/src/components/TextBox/style.less
@@ -25,10 +25,6 @@
 			color: var(--base-medium);
 		}
 		
-		&:hover:not(:focus) {
-			box-shadow: inset 0 0 0 2px var(--base-medium-high);
-		}
-		
 		&:not(:focus) {
 			color: var(--base-high);
 		}
@@ -63,6 +59,17 @@
 
 			&::placeholder {
 				color: var(--chrome-disabled-low);
+			}
+		}
+	}
+}
+
+body:not(.touch) {
+	.text-box {
+		input[type="text"],
+		textarea {
+			&:hover:not(:focus) {
+				box-shadow: inset 0 0 0 2px var(--base-medium-high);
 			}
 		}
 	}
