--- a/src/classes/MenuFlyout/style.less
+++ b/src/classes/MenuFlyout/style.less
@@ -64,10 +64,6 @@
 				pointer-events: none;
 			}
 			
-			&:hover:not(:active) {
-				background-color: var(--list-low);
-			}
-			
 			&:active {
 				background-color: var(--list-medium-low);
 				transform: scale(0.98);
@@ -87,5 +83,17 @@
 	
 	&.animate-out {
 		animation: menu-flyout-out 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+	}
+}
+
+body:not(.touch) {
+	.menu-flyout {
+		.menu-flyout-items {
+			.menu-flyout-item {
+				&:hover:not(:active) {
+					background-color: var(--list-low);
+				}
+			}
+		}
 	}
 }
