--- a/src/components/AppBarButton/style.less
+++ b/src/components/AppBarButton/style.less
@@ -5,10 +5,6 @@
 	min-width: 68px;
 	min-height: 56px;
 	
-	&:hover:not(:active) {
-		background-color: var(--list-low);
-	}
-	
 	&:active {
 		background-color: var(--list-medium-low);
 	}
@@ -41,6 +37,14 @@
 		
 		.path-icon svg {
 			opacity: 0.4;
+		}
+	}
+}
+
+body:not(.touch) {
+	.app-bar-button {
+		&:hover:not(:active) {
+			background-color: var(--list-low);
 		}
 	}
 }
