--- a/src/components/CheckBox/style.less
+++ b/src/components/CheckBox/style.less
@@ -41,17 +41,13 @@
 		}
 	}
 	
-	&:not([disabled]) input[type="checkbox"]{
+	&:not([disabled]) input[type="checkbox"] {
 		&:indeterminate + label:after {
 			box-shadow: inset 0 0 0 2px var(--system-accent-color);
 		}
 		&:checked + label {
 			&:after {
 				background-color: var(--system-accent-color);
-			}
-			
-			&:hover:not(:active):after {
-				box-shadow: inset 0 0 0 2px var(--base-high) !important;
 			}
 		}
 	}
@@ -69,6 +65,16 @@
 			
 			&:after {
 				box-shadow: inset 0 0 0 2px var(--base-medium-low) !important;
+			}
+		}
+	}
+}
+
+body:not(.touch) {
+	.checkbox {
+		&:not([disabled]) input[type="checkbox"] {
+			&:hover:not(:active):after {
+				box-shadow: inset 0 0 0 2px var(--base-high) !important;
 			}
 		}
 	}
