--- a/src/components/GridView/style.less
+++ b/src/components/GridView/style.less
@@ -29,10 +29,6 @@
 			height: 100%;
 			pointer-events: none;
 		}
-
-		&:hover:not(:active):after {
-			box-shadow: inset 0 0 0 2px var(--list-low);
-		}
 		
 		&:active {
 			.grid-view-item-content {
@@ -48,9 +44,21 @@
 			&:after {
 				box-shadow: inset 0 0 0 2px var(--system-accent-color);
 			}
-			
+		}
+	}
+}
+
+body:not(.touch) {
+	.grid-view {
+		.grid-view-item {
 			&:hover:not(:active):after {
-				box-shadow: inset 0 0 0 2px var(--system-accent-color-light-1);
+				box-shadow: inset 0 0 0 2px var(--list-low);
+			}
+			
+			&.selected {
+				&:hover:not(:active):after {
+					box-shadow: inset 0 0 0 2px var(--system-accent-color-light-1);
+				}
 			}
 		}
 	}
