--- a/src/components/PasswordBox/style.less
+++ b/src/components/PasswordBox/style.less
@@ -23,10 +23,6 @@
 			color: var(--base-medium);
 		}
 		
-		&:hover:not(:focus) {
-			box-shadow: inset 0 0 0 2px var(--base-medium-high);
-		}
-		
 		&:not(:focus) {
 			color: var(--base-high);
 		}
@@ -55,6 +51,16 @@
 
 			&::placeholder {
 				color: var(--chrome-disabled-low);
+			}
+		}
+	}
+}
+
+body:not(.touch) {
+	.password-box {
+		input[type="password"] {
+			&:hover:not(:focus) {
+				box-shadow: inset 0 0 0 2px var(--base-medium-high);
 			}
 		}
 	}
