--- a/src/components/ToggleSwitch/style.less
+++ b/src/components/ToggleSwitch/style.less
@@ -43,16 +43,6 @@
 			transition: transform 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
 		}
 		
-		&:hover:not(.active) {
-			&:before {
-				box-shadow: inset 0 0 0 2px var(--base-high);
-			}
-			
-			&:after {
-				background-color: var(--base-high);
-			}
-		}
-		
 		&:active {
 			&:before {
 				box-shadow: none !important;
@@ -78,17 +68,37 @@
 				background-color: #FFFFFF !important;
 				transform: translate3d(24px, 0, 0);
 			}
-			
-			&:hover:not(.active) {
-				&:before {
-					background-color: var(--system-accent-color-dark-1);
-				}
-			}
 		}
 	}
 	
 	&[disabled] {
 		pointer-events: none;
 		opacity: 0.4;
+	}
+}
+
+body:not(.touch) {
+	.toggle-switch {
+		label.switch-knob {
+			&:hover:not(.active) {
+				&:before {
+					box-shadow: inset 0 0 0 2px var(--base-high);
+				}
+				
+				&:after {
+					background-color: var(--base-high);
+				}
+			}
+		}
+		
+		input[type="checkbox"] {
+			&:checked + label.switch-knob {
+				&:hover:not(.active) {
+					&:before {
+						background-color: var(--system-accent-color-dark-1);
+					}
+				}
+			}
+		}
 	}
 }
