Added support for adding flyouts to buttons

--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -6,6 +6,9 @@ button {
 	line-height: 20px;
 	outline: none;
 	white-space: nowrap;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
 	
 	&::-moz-focus-inner {
 		border: 0;
