--- a/src/style/components.less
+++ b/src/style/components.less
@@ -8,9 +8,13 @@
 @import "../components/DataGrid/style.less";
 @import "../components/FlipView/style.less";
 @import "../components/FlipViewItem/style.less";
+@import "../components/Flyout/style.less";
 @import "../components/FontIcon/style.less";
 @import "../components/GridView/style.less";
 @import "../components/HyperlinkButton/style.less";
+@import "../components/MenuFlyout/style.less";
+@import "../components/MenuFlyoutItem/style.less";
+@import "../components/MenuFlyoutSeparator/style.less";
 @import "../components/Messages/style.less";
 @import "../components/NavigationView/style.less";
 @import "../components/NavigationViewItem/style.less";
