--- a/src/style/classes.less
+++ b/src/style/classes.less
@@ -1,4 +1,4 @@
 @import "../classes/ContentDialog/style.less";
-@import "../classes/Flyout/style.less";
-@import "../classes/MenuFlyout/style.less";
+// @import "../classes/Flyout/style.less";
+// @import "../classes/MenuFlyout/style.less";
 @import "../classes/Notification/style.less";
