Added Slider and ToolTip

--- a/src/style/components.less
+++ b/src/style/components.less
@@ -30,9 +30,11 @@
 @import "../components/ProgressRing/style.less";
 @import "../components/RadioButton/style.less";
 @import "../components/RatingControl/style.less";
+@import "../components/Slider/style.less";
 @import "../components/StackPanel/style.less";
 @import "../components/SymbolIcon/style.less";
 @import "../components/TextBlock/style.less";
 @import "../components/TextBox/style.less";
 @import "../components/ToggleSwitch/style.less";
+@import "../components/ToolTip/style.less";
 @import "../components/View/style.less";
