--- a/src/components/ToolTip/style.less
+++ b/src/components/ToolTip/style.less
@@ -3,4 +3,6 @@
 	padding: 5px 8px 7px;
 	background-color: var(--chrome-medium-low);
 	border: 1px solid var(--chrome-high);
+	pointer-events: none;
+	z-index: 1000;
 }
