--- a/src/style/components.less
+++ b/src/style/components.less
@@ -3,6 +3,7 @@
 @import "../components/AppBarSeparator/style.less";
 @import "../components/Button/style.less";
 @import "../components/CheckBox/style.less";
+@import "../components/ColorPicker/style.less";
 @import "../components/ComboBox/style.less";
 @import "../components/CommandBar/style.less";
 @import "../components/DataGrid/style.less";
